# acars-server

./: .editorconfig  .gitignore  Dockerfile  README.md  default.nix  docker-compose.yaml  flake.nix  pyproject.toml  shell.nix
acars_server/: app.py
