[tool.poetry]
name = "acars-server"
version = "0.1.0"
description = "ACARS Relay Server compatible to Hoppie"
authors = ["Franz Pletz <fpletz@fnordicwalking.de>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
requests = "^2.27.1"
loguru = "^0.6.0"
uvicorn = "^0.17.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
types-requests = "^2.27.9"

[tool.poetry.scripts]
acars-server = "acars_server.app:run"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
